[bumpversion]
current_version = 1.1.6
commit=True
tag=True

[metadata]
name = HaplotagLR
version = 1.1.6

[options]
packages = HaplotagLR
install_requires = 
	pysam
	biopython
	pyliftover
	requests
	importlib; python_version >= "3.6"

[options.entry_points]
console_scripts = 
	main = HaplotagLR:HaplotagLR
